The website of Soonyoung Kim

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <h4>  I immigrated to Pueblo, Colorado in 2011. </h4>
     <h4>  I now live in Blacksburg, Virginia as a college student. </h4>
     <h4>  I study Psychology and Professional & Technical Writing at Virginia Tech.</h4>
-    <h4>  I have a smarty cute cat, Sarang, and a dummy chubby cat, Darong.</h4>
+    <h4>  I am a academic coach at the University.</h4>
+    <h4>  I have a smarty cute cat, Sarang, and a dummy chubby cat, Darong. </h4>
     <h4>  I love learning about Skin-Care and Beauty Facial tips.</h4>
     <h4>  I want to go to graduate school for Industrial/Organizational Psychology or Technical Writing.</h4>
     <h4>  I write my thoughts pretty often, but they are mostly in Korean.</h4>
