--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <!-- Meta Tags -->
-    <title>TITLE GOES HERE</title>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <title>Photos</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,177 +17,79 @@
     <div class="container">
         <div class="box">
             <div class="image">
-                <img src="https://source.unsplash.com/370x270/?sport" alt="">
+              <img src="assets/img/20180906_102630.jpg"
+              alt="selfie" />
             </div>
             <!-- image -->
             <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
+                <h2>Hi I am Soonyoung!</h2>
+                <p>Feel feel to reach me at soon95@vt.edu. I'd love to listen to your any opinions.</p>
             </div>
             <!-- content -->
         </div>
         <!-- box -->
         <div class="box">
-            <img src="https://source.unsplash.com/370x270/?wild" alt="">
+          <img src="assets/img/Untitled 5.jpg"
+          alt="selfie" />
             <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
+                <h2>I am an acedemic coach at Virginia Tech</h2>
+                <p>You can meet me individually via appointments or various seminars.</p>
             </div>
             <!-- content -->
         </div>
         <!-- box -->
         <div class="box">
             <div class="image">
-                <img src="https://source.unsplash.com/370x270/?dance" alt="">
+              <img src="assets/img/untitled 7.png"
+              alt="presentation" />
             </div>
             <!-- image -->
             <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
+                <h2>Meeting the Coaches</h2>
+                <p>We are professionals to assist students with hard work and strategies.</p>
             </div>
             <!-- content -->
         </div>
         <!-- box -->
         <div class="box">
             <div class="image">
-                <img src="https://source.unsplash.com/370x270/?outdoor" alt="">
+                <img src="assets/img/Untitled 2.png" alt="article">
             </div>
             <!-- image -->
             <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
+                <h2>I am also a Undergraduate Research Assistant(URA)</h2>
+                <p>I read tens of these types of articles every week.</p>
             </div>
             <!-- content -->
         </div>
         <!-- box -->
         <div class="box">
             <div class="image">
-                <img src="https://source.unsplash.com/370x270/?horse" alt="">
+                <img src="assets/img/Untitled 4.jpg" alt="another-article">
             </div>
             <!-- image -->
             <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
+                <h2>I love what I do as a URA</h2>
+                <p>I Want to become a Industrial/Organizational Psychologist.</p>
             </div>
             <!-- content -->
         </div>
         <!-- box -->
         <div class="box">
             <div class="image">
-                <img src="https://source.unsplash.com/370x270/?wedding" alt="">
+                <img src="assets/img/1528727167710.jpg" alt="with-lincoln-statue">
             </div>
             <!-- image -->
             <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
+                <h2>I became a U.S. citizen in March of 2018 </h2>
+                <p>In progress of developing a patriotic mindset.</p>
             </div>
             <!-- content -->
         </div>
-        <!-- box -->
-        <div class="box">
-            <div class="image">
-                <img src="https://source.unsplash.com/370x270/?water" alt="">
-            </div>
-            <!-- image -->
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <img src="https://source.unsplash.com/370x270/?dog" alt="">
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <div class="image">
-                <img src="https://source.unsplash.com/370x270/?love" alt="">
-            </div>
-            <!-- image -->
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <div class="image">
-                <img src="https://source.unsplash.com/370x270/?sky" alt="">
-            </div>
-            <!-- image -->
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <div class="image">
-                <img src="https://source.unsplash.com/370x270/?earth" alt="">
-            </div>
-            <!-- image -->
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <div class="image">
-                <img src="https://source.unsplash.com/370x270/?ocean" alt="">
-            </div>
-            <!-- image -->
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <div class="image">
-                <img src="https://source.unsplash.com/370x270/?mountain" alt="">
-            </div>
-            <!-- image -->
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <img src="https://source.unsplash.com/370x270/?car" alt="">
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
-        <div class="box">
-            <div class="image">
-                <img src="https://source.unsplash.com/370x270/?lion" alt="">
-            </div>
-            <!-- image -->
-            <div class="content">
-                <h2>Image Hover Effect</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum.</p>
-            </div>
-            <!-- content -->
-        </div>
-        <!-- box -->
 
     </div>
     <!-- container -->
   </body>
 </html>
+
+<!--Resources: https://codepen.io/AleksandarCizmadija/pen/vabboM: CSS Grid album with nice hover effect -->
