--- a/resume.html
+++ b/resume.html
@@ -55,14 +55,13 @@
 				</div>
 				<!-- EDIT: work line 1 -->
 				<div class="col-lg-6">
-					<p class="tight"><t>Student’s Assistant</t><br/>
-						Services for Students with Disabilities, Virginia Tech <br/>
-					</p>
+					<p class="tight"><t>i. Student’s Assistant</t><br/>
+            At Services for Students with Disabilities, Virginia Tech <br/>
 					<p><more>
-            Attend a designated class and take notes to assist a student with a vision impairment
+          • Attend a designated class and take notes to assist a student with a vision impairment
           </more></p>
           <p><more>
-            Provide other necessary assistance upon request during and outside of the class
+          • Provide other necessary assistance upon request during and outside of the class
           </more></p>
 				</div>
 				<div class="col-lg-3">
@@ -72,20 +71,20 @@
 
 				<!-- EDIT: work line 2-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>Undergraduate Research Assistant</t><br/>
-						Work Stress and Recovery Lab <br/>
+					<p class="tight"><t>ii. Undergraduate Research Assistant</t><br/>
+					At Work Stress and Recovery Lab <br/>
 					</p>
 					<p><more>
-            Received training to conduct and create online surveys
+            • Received training to conduct and create online surveys
           </more></p>
           <p><more>
-            Send out the emails to the expected participants with the survey links to evaluate expectations that employees and other salient individuals in their lives hold how their work is done
+          •  Send out the emails to the expected participants with the survey links to evaluate expectations that employees and other salient individuals in their lives hold how their work is done
           </more></p>
           <p><more>
-            Revise the recruitment documents aiming for the participants
+          •  Revise the recruitment documents aiming for the participants
           </more></p>
           <p><more>
-            Present findings to the director, graduate students, and peer research assistants
+          •  Present findings to the director, graduate students, and peer research assistants
           </more></p>
 				</div>
 				<div class="col-lg-3">
@@ -94,14 +93,14 @@
 				</div>
         <!-- EDIT: work line 3-->
         <div class="col-lg-6 col-lg-offset-3">
-          <p class="tight"><t>Executive Committee Member</t><br/>
-            Actively Caring for People (AC4P) <br/>
+          <p class="tight"><t>iii. Executive Committee Member</t><br/>
+          At Actively Caring for People (AC4P) <br/>
           </p>
           <p><more>
-            Makes decisions and evaluations for the goals of AC4P: helping each other, receiving kindness with gratitude, and recognizing others who are actively caring
+          • Makes decisions and evaluations for the goals of AC4P: helping each other, receiving kindness with gratitude, and recognizing others who are actively caring
           </more></p>
           <p><more>
-            Sets plans for the upcoming years and communicates with the current members to build a vision of “School to Public Service”
+          • Sets plans for the upcoming years and communicates with the current members to build a vision of “School to Public Service”
         </div>
         <div class="col-lg-3">
           <p><sm>APRIL 2018 - PRESENT <br />
@@ -109,14 +108,14 @@
         </div>
         <!-- EDIT: work line 4-->
         <div class="col-lg-6 col-lg-offset-3">
-          <p class="tight"><t>Student Success Ambassador</t><br/>
-            Student Success Center<br/>
+          <p class="tight"><t>iv. Student Success Ambassador</t><br/>
+          At Student Success Center<br/>
           </p>
           <p><more>
-            Became an expert on Student Success Center programs and provide academic assistance with effective study techniques to students
+          • Became an expert on Student Success Center programs and provide academic assistance with effective study techniques to students
           </more></p>
           <p><more>
-            Guide students through short- and long-term planning to reach their personal life goals
+          • Guide students through short- and long-term planning to reach their personal life goals
           </more></p>
         </div>
         <div class="col-lg-3">
@@ -125,14 +124,14 @@
         </div>
         <!-- EDIT: work line 5-->
         <div class="col-lg-6 col-lg-offset-3">
-          <p class="tight"><t>Peer Assistance for Learning Member</t><br/>
-          Cook Counseling Center <br/>
+          <p class="tight"><t>v. Peer Assistance for Learning Member</t><br/>
+          At Cook Counseling Center <br/>
           </p>
           <p><more>
-            Learn communication skills, the power of mental health awareness, and the useful sources to reduce the stigma associated
+            • Learn communication skills, the power of mental health awareness, and the useful sources to reduce the stigma associated
           </more></p>
           <p><more>
-            Reach out to students and provide them with the resources for academic and emotional support
+            • Reach out to students and provide them with the resources for academic and emotional support
           </more></p>
         </div>
         <div class="col-lg-3">
@@ -154,23 +153,18 @@
 
 				<!-- EDIT: TECHNOLOGIES line 1-->
 				<div class="col-lg-6">
-					<p><t>HTML (Beginner)</t><br/>
-					</p>
-				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>CSS (Beginner)</t><br/>
+					<p><t>• HTML (Beginner)</t><br/>
 					</p>
           <div class="col-lg-6 col-lg-offset-3">
-  					<p class="tight"><t>CSS (Beginner)</t><br/>
+  					<p class="tight"><t>• CSS (Beginner)</t><br/>
   					</p>
             <div class="col-lg-6 col-lg-offset-3">
-    					<p class="tight"><t>WordPress & Wix (Beginner)</t><br/>
+    					<p class="tight"><t>• WordPress & Wix (Beginner)</t><br/>
     					</p>
               <div class="col-lg-6 col-lg-offset-3">
-      					<p class="tight"><t>Microsoft Suite & Google Drive (Expert)</t><br/>
+      					<p class="tight"><t>• Microsoft Suite & Google Drive (Expert)</t><br/>
       					</p>
-                <div class="col-lg-6 col-lg-offset-3">
-        					<p class="tight"><t>CSS (Beginner)</t><br/>
-        					</p>
+        
                   <!-- STATISTICAL PROGRAMS SECTION -->
                 	<div class="container desc">
                 		<div class="row">
@@ -180,10 +174,10 @@
 
                 				<!-- EDIT: STATISTICAL PROGRAMS line 1-->
                 				<div class="col-lg-6">
-                					<p><t> Working knowledge of statistical programs: JMP, Microsoft Excel, and SPSS</t><br/>
+                					<p><t>• Working knowledge of statistical programs: JMP, Microsoft Excel, and SPSS</t><br/>
                 					</p>
                           <div class="col-lg-6">
-                  					<p><t> Experience in Qualtrics</t><br/>
+                  					<p><t> • Experience in Qualtrics</t><br/>
                   					</p>
 <!-- LANGUAGES SECTION -->
   <div class="container desc">
@@ -193,13 +187,13 @@
       </div>
     <!-- EDIT: TECHNOLOGIES line 1-->
       <div class="col-lg-6">
-        <p><t>English (Full Professional Proficiency) </t><br/>
+        <p><t>• English (Full Professional Proficiency) </t><br/>
         </p>
         <div class="col-lg-6">
-          <p><t>Korean (Native)</t><br/>
+          <p><t>• Korean (Native)</t><br/>
           </p>
           <div class="col-lg-6">
-            <p><t>Japanese(Conversant)</t><br/>
+            <p><t>• Japanese(Conversant)</t><br/>
             </p>
 		</div><!--/.row -->
 		<br>
