--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Meta Tags -->
-    <title>TITLE GOES HERE</title>
+    <title>Cntacts</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,3 +29,4 @@
 </div>
   </body>
 </html>
+<!--Resources: https://codepen.io/anon/pen/OoBqZK:[contact] -->
